# bd-suffix

./: .gitignore  Cargo.toml
benches/: create_bench.rs  random_20000.txt
src/: gen_simple.rs  lib.rs  sp_u8.rs
src/gens/: mod.rs  modes.rs  sais.rs  simple.rs  tests.rs  two_stage.rs
src/search/: mod.rs
