[package]
name = "bd-suffix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gen_check = []

[dependencies]
bitvec = "1.0.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "create_bench"
harness = false
